--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "podboy"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 description = "A daemon system for podman"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "1.26.0", features = ["full"] }
