--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
 name = "podboy"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
-description = "A daemon system for podman"
+description = "Pods with Borderless orchestration (yes)"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.26.0", features = ["full"] }
 
