--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,9 @@
 name = "podboy"
 version = "0.1.4"
 edition = "2021"
-description = "Pods with Borderless orchestration (yes)"
+description = "Availability CLI for podman containers"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
+anyhow = "1.0.81"
