--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,8 @@ name = "podboy"
 version = "0.1.4"
 edition = "2021"
 description = "Availability CLI for podman containers"
-
+authors = ["ToastXC contact@toastxc.xyz"]
+license = "GPL-3.0-only"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
