--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "podboy"
-version = "0.1.4"
+version = "0.1.6"
 edition = "2021"
 description = "Availability CLI for podman containers"
 authors = ["ToastXC contact@toastxc.xyz"]
@@ -8,4 +8,5 @@ license = "GPL-3.0-only"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.81"
+anyhow = "1.0.86"
+clap = { version = "4.5.11", features = ["cargo"] }
